--- a/Savio/RegistrationViewController/RegistrationCell/linkButtonTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/linkButtonTableViewCell.xib
@@ -7,25 +7,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="linkButtonTableViewCell" customModule="Savio" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="23" id="KGk-i7-Jjw" customClass="linkButtonTableViewCell" customModule="Savio" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="23"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="22"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9v1-Er-M2R">
-                        <rect key="frame" x="8" y="7" width="304" height="30"/>
-                        <state key="normal">
-                            <attributedString key="attributedTitle">
-                                <fragment content="Why do we need this information?">
-                                    <attributes>
-                                        <color key="NSColor" red="0.49411764705882355" green="0.49019607843137253" blue="0.50196078431372548" alpha="1" colorSpace="calibratedRGB"/>
-                                        <font key="NSFont" size="15" name="HelveticaNeue"/>
-                                        <integer key="NSUnderline" value="1"/>
-                                    </attributes>
-                                </fragment>
-                            </attributedString>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9v1-Er-M2R">
+                        <rect key="frame" x="8" y="11" width="304" height="15"/>
+                        <state key="normal" title="">
+                            <color key="titleColor" red="0.50196078430000002" green="0.49803921569999998" blue="0.50980392159999999" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
                 </subviews>
@@ -33,6 +25,7 @@
             <connections>
                 <outlet property="btnLink" destination="9v1-Er-M2R" id="xQR-xF-hId"/>
             </connections>
+            <point key="canvasLocation" x="324" y="219.5"/>
         </tableViewCell>
     </objects>
 </document>
