--- a/Savio/PINViewController/CreatePINViewController.xib
+++ b/Savio/PINViewController/CreatePINViewController.xib
@@ -33,27 +33,33 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="savivo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="d5P-qH-aIi">
                     <rect key="frame" x="263" y="37" width="75" height="75"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="75" id="6oX-7A-IWC"/>
-                        <constraint firstAttribute="height" constant="75" id="SOO-uR-8DL"/>
+                        <constraint firstAttribute="width" constant="75" id="RGO-V0-r4n"/>
+                        <constraint firstAttribute="height" constant="75" id="XSB-q2-13i"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter a new 4 digit Passcode" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KSj-ds-clV">
                     <rect key="frame" x="160" y="132" width="280" height="100"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="280" id="37m-mL-pd0"/>
-                        <constraint firstAttribute="height" constant="100" id="jVB-Su-xQd"/>
+                        <constraint firstAttribute="width" constant="280" id="7AW-td-de6"/>
+                        <constraint firstAttribute="height" constant="100" id="Re7-Dx-jui"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="4 digit PIN" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JfG-pe-WIG">
-                    <rect key="frame" x="30" y="252" width="540" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JfG-pe-WIG">
+                    <rect key="frame" x="30" y="252" width="540" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="Rqi-wZ-7Zh"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Re-enter 4 digit PIN" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lq4-PM-TIF">
-                    <rect key="frame" x="30" y="296" width="540" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lq4-PM-TIF">
+                    <rect key="frame" x="30" y="300" width="540" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="22S-vB-Ldd"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -61,7 +67,7 @@
                     <rect key="frame" x="30" y="374" width="540" height="40"/>
                     <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="boi-kk-gor"/>
+                        <constraint firstAttribute="height" constant="40" id="Lrp-l2-Mhj"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="17"/>
                     <state key="normal" title="Confirm Passcode">
@@ -74,8 +80,8 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dxE-82-rRE">
                     <rect key="frame" x="277" y="437" width="46" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="46" id="a4W-kA-M6o"/>
-                        <constraint firstAttribute="height" constant="30" id="ax3-Of-4kY"/>
+                        <constraint firstAttribute="height" constant="30" id="fIW-BL-vZQ"/>
+                        <constraint firstAttribute="width" constant="46" id="xfS-Vb-bM2"/>
                     </constraints>
                     <state key="normal">
                         <attributedString key="attributedTitle">
@@ -95,25 +101,26 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="JfG-pe-WIG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="3E1-JW-hqX"/>
-                <constraint firstItem="Caz-QS-qcK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="6Vi-H9-c82"/>
-                <constraint firstItem="Caz-QS-qcK" firstAttribute="top" secondItem="Lq4-PM-TIF" secondAttribute="bottom" constant="48" id="8Du-kI-OEh"/>
-                <constraint firstItem="Caz-QS-qcK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="8ZT-v3-cTH"/>
-                <constraint firstAttribute="trailing" secondItem="JfG-pe-WIG" secondAttribute="trailing" constant="30" id="9FE-iR-gA4"/>
-                <constraint firstItem="Lq4-PM-TIF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="BF8-Qa-Tcg"/>
-                <constraint firstItem="Lq4-PM-TIF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="HUg-yx-V4q"/>
-                <constraint firstItem="Lq4-PM-TIF" firstAttribute="top" secondItem="JfG-pe-WIG" secondAttribute="bottom" constant="14" id="J0G-6g-OQg"/>
-                <constraint firstItem="dxE-82-rRE" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="M0x-bS-Vdn"/>
-                <constraint firstItem="KSj-ds-clV" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="20" id="Z50-AD-5T8"/>
-                <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="20" id="cMc-Dj-Dyp"/>
-                <constraint firstItem="dxE-82-rRE" firstAttribute="top" secondItem="Caz-QS-qcK" secondAttribute="bottom" constant="23" id="grF-eN-3qs"/>
-                <constraint firstItem="d5P-qH-aIi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="37" id="if0-Ie-V4F"/>
-                <constraint firstAttribute="trailing" secondItem="Lq4-PM-TIF" secondAttribute="trailing" constant="30" id="jyr-uV-gzc"/>
-                <constraint firstItem="JfG-pe-WIG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="oAf-Xb-nrh"/>
-                <constraint firstAttribute="trailing" secondItem="Caz-QS-qcK" secondAttribute="trailing" constant="30" id="t4K-pE-jhB"/>
-                <constraint firstItem="KSj-ds-clV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="uyb-ze-n7a"/>
-                <constraint firstItem="d5P-qH-aIi" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="y5c-6D-f6l"/>
+                <constraint firstItem="KSj-ds-clV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7uH-ix-hfz"/>
+                <constraint firstItem="Lq4-PM-TIF" firstAttribute="top" secondItem="JfG-pe-WIG" secondAttribute="bottom" constant="8" id="8Pu-nB-Ajt"/>
+                <constraint firstItem="JfG-pe-WIG" firstAttribute="top" secondItem="KSj-ds-clV" secondAttribute="bottom" constant="20" id="9ZT-uT-2Z8"/>
+                <constraint firstItem="Lq4-PM-TIF" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="EqW-y0-fr2"/>
+                <constraint firstItem="Caz-QS-qcK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="H1c-7c-FDL"/>
+                <constraint firstAttribute="trailing" secondItem="JfG-pe-WIG" secondAttribute="trailing" constant="30" id="IhQ-4S-yYX"/>
+                <constraint firstItem="Caz-QS-qcK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="LZ3-l4-kNF"/>
+                <constraint firstItem="KSj-ds-clV" firstAttribute="top" secondItem="d5P-qH-aIi" secondAttribute="bottom" constant="20" id="TV4-LE-0Lh"/>
+                <constraint firstItem="Caz-QS-qcK" firstAttribute="top" secondItem="Lq4-PM-TIF" secondAttribute="bottom" constant="44" id="ZCM-B6-BWO"/>
+                <constraint firstItem="dxE-82-rRE" firstAttribute="top" secondItem="Caz-QS-qcK" secondAttribute="bottom" constant="23" id="aHH-bm-G82"/>
+                <constraint firstItem="JfG-pe-WIG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="aKU-g1-fDM"/>
+                <constraint firstItem="d5P-qH-aIi" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="bJ2-SA-lM0"/>
+                <constraint firstItem="JfG-pe-WIG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cSY-nT-Zr4"/>
+                <constraint firstItem="dxE-82-rRE" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cqW-wF-cmp"/>
+                <constraint firstAttribute="trailing" secondItem="Caz-QS-qcK" secondAttribute="trailing" constant="30" id="gQL-cm-dCE"/>
+                <constraint firstAttribute="trailing" secondItem="Lq4-PM-TIF" secondAttribute="trailing" constant="30" id="hRE-my-6tY"/>
+                <constraint firstItem="d5P-qH-aIi" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="37" id="sUC-a5-n29"/>
+                <constraint firstItem="Lq4-PM-TIF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="xr7-hQ-fzM"/>
             </constraints>
+            <point key="canvasLocation" x="289" y="96"/>
         </view>
     </objects>
     <resources>
