--- a/Savio/RegistrationViewController/PageView.xib
+++ b/Savio/RegistrationViewController/PageView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,27 +11,16 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kwk-dN-fAd">
-                    <rect key="frame" x="20" y="575" width="560" height="25"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="25" id="YI6-JJ-FxA"/>
-                    </constraints>
-                    <state key="normal" title="Important Information">
-                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                </button>
                 <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3p1-eM-9bL">
-                    <rect key="frame" x="20" y="10" width="560" height="560"/>
+                    <rect key="frame" x="20" y="10" width="560" height="574"/>
+                    <animations/>
                 </imageView>
             </subviews>
+            <animations/>
             <constraints>
-                <constraint firstItem="Kwk-dN-fAd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="FWq-VS-lWy"/>
+                <constraint firstAttribute="bottom" secondItem="3p1-eM-9bL" secondAttribute="bottom" constant="16" id="1Ja-26-CWC"/>
                 <constraint firstItem="3p1-eM-9bL" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="MRU-JE-r29"/>
-                <constraint firstAttribute="trailing" secondItem="Kwk-dN-fAd" secondAttribute="trailing" constant="20" id="NY9-dX-wYH"/>
                 <constraint firstAttribute="trailing" secondItem="3p1-eM-9bL" secondAttribute="trailing" constant="20" id="aZZ-Vp-nhe"/>
-                <constraint firstItem="Kwk-dN-fAd" firstAttribute="top" secondItem="3p1-eM-9bL" secondAttribute="bottom" constant="5" id="e50-CP-7T9"/>
-                <constraint firstAttribute="bottom" secondItem="Kwk-dN-fAd" secondAttribute="bottom" id="tu3-Rh-0PF"/>
                 <constraint firstItem="3p1-eM-9bL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="v5d-mG-X5Y"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
