--- a/Savio/RegistrationViewController/RegistrationCell/DropDownTxtFieldTableViewCell.xib
+++ b/Savio/RegistrationViewController/RegistrationCell/DropDownTxtFieldTableViewCell.xib
@@ -8,33 +8,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="33" id="KGk-i7-Jjw" customClass="TxtFieldTableViewCell" customModule="Savio" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="33"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="35" id="KGk-i7-Jjw" customClass="DropDownTxtFieldTableViewCell" customModule="Savio" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="35"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="32"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="34"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ex9-nW-iG7">
-                        <rect key="frame" x="8" y="3" width="304" height="27"/>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t78-BE-f8p">
+                        <rect key="frame" x="8" y="4" width="304" height="27"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                         <connections>
-                            <outlet property="delegate" destination="-1" id="wkX-CZ-qEj"/>
+                            <outlet property="delegate" destination="-1" id="nYZ-t5-Urt"/>
                         </connections>
                     </textField>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Ex9-nW-iG7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-5" id="B3a-IL-Zs2"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Ex9-nW-iG7" secondAttribute="bottom" constant="-6" id="D2S-zU-DlI"/>
-                    <constraint firstItem="Ex9-nW-iG7" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="fDU-pZ-gIe"/>
-                    <constraint firstItem="Ex9-nW-iG7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="uUM-G4-yOE"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="t78-BE-f8p" secondAttribute="bottom" constant="-5" id="3Il-Ee-OgW"/>
+                    <constraint firstItem="t78-BE-f8p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="7yE-OL-Y21"/>
+                    <constraint firstItem="t78-BE-f8p" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-4" id="a0T-fO-4aE"/>
+                    <constraint firstItem="t78-BE-f8p" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="vev-aS-ffk"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="tf" destination="Ex9-nW-iG7" id="AIR-7T-FyY"/>
+                <outlet property="tf" destination="t78-BE-f8p" id="A1V-Qm-pB1"/>
             </connections>
-            <point key="canvasLocation" x="252" y="266.5"/>
+            <point key="canvasLocation" x="353" y="220"/>
         </tableViewCell>
     </objects>
 </document>
