--- a/Savio/PINViewController/SAEnterYourPINViewController.xib
+++ b/Savio/PINViewController/SAEnterYourPINViewController.xib
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <customFonts key="customFonts">
+        <mutableArray key="GothamRounded-Light.otf">
+            <string>GothamRounded-Light</string>
+            <string>GothamRounded-Light</string>
+        </mutableArray>
+        <mutableArray key="GothamRounded-Medium.otf">
+            <string>GothamRounded-Medium</string>
+        </mutableArray>
         <mutableArray key="gotham-rounded-book-2.otf">
-            <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
             <string>GothamRounded-Book</string>
         </mutableArray>
@@ -14,8 +20,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SAEnterYourPINViewController" customModule="Savio" customModuleProvider="target">
             <connections>
+                <outlet property="btnCancel" destination="yO2-Dv-Fci" id="sbz-I7-Fsk"/>
+                <outlet property="btnForgottPasscode" destination="YRO-Ha-Z4h" id="Eme-Fg-pIa"/>
                 <outlet property="enterPasscodeTextField" destination="ajo-fL-EaP" id="P0l-6N-IgH"/>
                 <outlet property="forgotPasscodeButton" destination="YRO-Ha-Z4h" id="5AQ-qV-oXj"/>
+                <outlet property="lblForgottonYourPasscode" destination="uH3-CJ-3vG" id="mTC-he-8dV"/>
+                <outlet property="lblSentYouCode" destination="WBk-LD-bTU" id="Hpd-zo-GHh"/>
                 <outlet property="loginButton" destination="oLD-AK-Fy3" id="gLJ-0D-MQx"/>
                 <outlet property="registerButton" destination="1ng-Ts-N3O" id="TEo-3O-Hbk"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -99,16 +109,59 @@
                         <constraint firstAttribute="height" constant="21" id="Kbb-PM-Wbn"/>
                         <constraint firstAttribute="width" constant="240" id="WGz-Ev-9fj"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="14"/>
+                    <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="14"/>
                     <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgotton your passcode?" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uH3-CJ-3vG">
+                    <rect key="frame" x="200" y="150" width="200" height="150"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="lfx-0y-bzJ"/>
+                        <constraint firstAttribute="height" constant="150" id="t2S-MN-Ykz"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="36"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We'll sent you a code to unlock your account" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBk-LD-bTU">
+                    <rect key="frame" x="213" y="341" width="175" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="175" id="e6J-D1-bOG"/>
+                        <constraint firstAttribute="height" constant="40" id="ptG-nv-Uv3"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="14"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yO2-Dv-Fci">
+                    <rect key="frame" x="270" y="478" width="61" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="2hE-tg-R8U"/>
+                        <constraint firstAttribute="width" constant="61" id="d5e-rs-Svj"/>
+                    </constraints>
+                    <state key="normal">
+                        <attributedString key="attributedTitle">
+                            <fragment content="Cancel">
+                                <attributes>
+                                    <color key="NSColor" red="0.36470588240000001" green="0.37254901959999998" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
+                                    <font key="NSFont" size="14" name="GothamRounded-Light"/>
+                                    <integer key="NSUnderline" value="1"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                    </state>
+                    <connections>
+                        <action selector="onClickCancelButton:" destination="-1" eventType="touchUpInside" id="C47-RU-EbI"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="1ng-Ts-N3O" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="0Xy-Zh-ixq"/>
+                <constraint firstItem="uH3-CJ-3vG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="2YC-Mf-lvc"/>
                 <constraint firstItem="ajo-fL-EaP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="4Ja-Ty-ahV"/>
                 <constraint firstAttribute="trailing" secondItem="oLD-AK-Fy3" secondAttribute="trailing" constant="30" id="5hl-8q-orw"/>
+                <constraint firstItem="yO2-Dv-Fci" firstAttribute="top" secondItem="1ng-Ts-N3O" secondAttribute="bottom" constant="32" id="L8L-BW-n1k"/>
                 <constraint firstItem="1ng-Ts-N3O" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="Nnp-5x-fI1"/>
                 <constraint firstItem="oLD-AK-Fy3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="Val-6v-2xL"/>
                 <constraint firstItem="hME-bb-vkK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="aCg-D1-9Au"/>
@@ -116,12 +169,16 @@
                 <constraint firstItem="ajo-fL-EaP" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="hMl-Jz-hUe"/>
                 <constraint firstItem="1ng-Ts-N3O" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="87" id="hZ3-0N-1sh"/>
                 <constraint firstItem="ajo-fL-EaP" firstAttribute="top" secondItem="hME-bb-vkK" secondAttribute="bottom" constant="15" id="k1Y-bE-ood"/>
+                <constraint firstItem="uH3-CJ-3vG" firstAttribute="top" secondItem="OTi-RR-xfC" secondAttribute="bottom" constant="15" id="kAa-ix-lHM"/>
                 <constraint firstItem="OTi-RR-xfC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="60" id="mL8-rd-Seu"/>
                 <constraint firstAttribute="trailing" secondItem="1ng-Ts-N3O" secondAttribute="trailing" constant="30" id="n2S-k8-Sao"/>
+                <constraint firstItem="yO2-Dv-Fci" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="o1g-d8-2Ar"/>
                 <constraint firstItem="hME-bb-vkK" firstAttribute="top" secondItem="OTi-RR-xfC" secondAttribute="bottom" constant="5" id="pZQ-uC-9dh"/>
+                <constraint firstItem="WBk-LD-bTU" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="pun-GM-lA0"/>
                 <constraint firstAttribute="trailing" secondItem="ajo-fL-EaP" secondAttribute="trailing" constant="30" id="stw-AA-zMX"/>
                 <constraint firstItem="YRO-Ha-Z4h" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tWp-PJ-8uI"/>
                 <constraint firstItem="OTi-RR-xfC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tkS-2e-Ms8"/>
+                <constraint firstItem="WBk-LD-bTU" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="22" id="wVQ-8J-Vmk"/>
                 <constraint firstItem="oLD-AK-Fy3" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="wpY-h4-ACF"/>
                 <constraint firstItem="YRO-Ha-Z4h" firstAttribute="top" secondItem="oLD-AK-Fy3" secondAttribute="bottom" constant="16" id="zIW-82-qsR"/>
             </constraints>
